--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_REACT_API_URL="https://backideal-api-server-xryf2.ondigitalocean.app/api"
+VITE_REACT_API_URL="https://ideal-roofing-api.azurewebsites.net/api"
