--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_REACT_API_URL="https://ideal-roofing-api.azurewebsites.net/api"
+VITE_REACT_COLOR_IMAGES_URL = "https://idealportalphoto.blob.core.windows.net/colors"
+VITE_REACT_PRODUCT_IMAGES_URL = "https://idealportalphoto.blob.core.windows.net/products"
+VITE_REACT_EPICOR_API_URL = "https://cadcentraldtpilot01.epicorsaas.com/SaaS511Pilot/api/v2/efx/157541/PortalPublic"
+VITE_REACT_EPICOR_API_KEY = "bZ9LNk3CiPj8O4pZfFEaSh2LFOJLBSsiLvkuX03BCqQdd"
